# CS175-AI2-THOR

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  README_TRAINING.md  friday_report_script.md  pyproject.toml  requirements.txt  requirements_gpu.txt  setup.sh
.devcontainer/: devcontainer.json
configs/: coverage_agent.yaml  heuristic_agent.yaml  random_agent.yaml
docker/: Dockerfile  environment.yml
logs/method1/: training_log.csv
results/: llm_reasoning.json  small_eval.json
scripts/: _diag.py  _diag2.py  _diag3.py  _diag4.py  _diag5.py  _diag6.py  analyze_evaluation.py  cleanup_ai2thor_processes.py  evaluate_coverage_agent.py  evaluate_heuristic_agent.py  evaluate_random_agent.py  inspect_failures.py  method1_colab.ipynb  plot_training.py  render_episode_gif.py  render_episode_mp4.py  run_coverage_agent.py  run_heuristic_agent.py  run_random_agent.py  run_small_eval.py  smoke_test_ai2thor.py  train_method1.py
src/: integration_test.py
src/eval/: __init__.py  runner.py
src/mapping/: __init__.py  builder.py  visualize.py
src/method1/: __init__.py  navigator.py  policy.py
src/method2/: __init__.py  navigator.py
src/method3/: __init__.py  navigator.py
src/objectnav/: __init__.py  config.py  coverage_agent.py  env.py  evaluation.py  heuristic_agent.py  random_agent.py  recording.py
src/objectnav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shared/: interfaces.py
tests/: test_train_method1_recovery.py
